Make modal close button fixed on mobile

--- a/src/candidateInfo.css
+++ b/src/candidateInfo.css
@@ -148,7 +148,7 @@
     }
 
     .sc-modal-close {
-        position: absolute;
+        position: fixed;
         top: 0;
         right: .3em;
         background: none;
